first commit in second branch

--- a/project1.html
+++ b/project1.html
@@ -64,7 +64,7 @@ Notes:
         width: 44px;
         height: 44px;
         border-radius: 10px;
-        background: linear-gradient(135deg, #7c3aed, #06b6d4);
+        background: linear-gradient(135deg, #7d3aed, #07b6d4);
         display: flex;
         align-items: center;
         justify-content: center;
